--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,76 @@
 # Dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
+.pnp.cjs
+yarn.lock
+package-lock.json
 
 # Testing
 /coverage
+.nyc_output
 
 # Production
 /build
 /dist
+/dist-ssr
+*.local
 
-# Misc
-.DS_Store
+# Environment files
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Firebase
+serviceAccountCredentials.json
+firebase-debug.log
+firebase-debug.*.log
+.firebase/
+firebase-debug.log
+ui-debug.log
+
 # Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+logs
+*.log
 
 # IDE
 .idea/
-.vscode/
-*.swp
-*.swo
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
 
 # TypeScript
 *.tsbuildinfo
+next-env.d.ts
 
-# Logs
-logs
-*.log
-pnpm-debug.log*
-lerna-debug.log*
+# Cache
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+.output/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Misc
+.DS_Store
+*.pem
+.vercel
+.turbo
+storybook-static/
 
 # Editor directories and files
 .vscode/*
